--- a/front/src/app/floating-icons/floating-icons.component.html
+++ b/front/src/app/floating-icons/floating-icons.component.html
@@ -1,59 +1,59 @@
 <div class="floating-icons-container" [style.position]="position">
   <!-- Floating Icons -->
   <div class="floating-icon icon-1">
-    <img src="/3d-icons/008_Guard.png" alt="Guard Icon" class="icon-image">
+    <img src="3d-icons/008_Guard.png" alt="Guard Icon" class="icon-image">
   </div>
   <div class="floating-icon icon-2">
-    <img src="/3d-icons/014_Location.png" alt="Location Icon" class="icon-image">
+    <img src="3d-icons/014_Location.png" alt="Location Icon" class="icon-image">
   </div>
   <div class="floating-icon icon-3">
-    <img src="/3d-icons/020_Medical_Tag.png" alt="Medical Tag Icon" class="icon-image">
+    <img src="3d-icons/020_Medical_Tag.png" alt="Medical Tag Icon" class="icon-image">
   </div>
   <div class="floating-icon icon-4">
-    <img src="/3d-icons/029_Stethoscope 1.png" alt="Stethoscope Icon" class="icon-image">
+    <img src="3d-icons/029_Stethoscope 1.png" alt="Stethoscope Icon" class="icon-image">
   </div>
   <div class="floating-icon icon-5">
-    <img src="/3d-icons/059_Surgeon.png" alt="Surgeon Icon" class="icon-image">
+    <img src="3d-icons/059_Surgeon.png" alt="Surgeon Icon" class="icon-image">
   </div>
   <div class="floating-icon icon-6">
-    <img src="/3d-icons/3d_medicine_prescription_and_pills.png" alt="Medicine Pills Icon" class="icon-image">
+    <img src="3d-icons/3d_medicine_prescription_and_pills.png" alt="Medicine Pills Icon" class="icon-image">
   </div>
 
   <div class="floating-icon icon-1">
-    <img src="/3d-icons/008_Guard.png" alt="Guard Icon" class="icon-image">
+    <img src="3d-icons/008_Guard.png" alt="Guard Icon" class="icon-image">
   </div>
   <div class="floating-icon icon-2">
-    <img src="/3d-icons/014_Location.png" alt="Location Icon" class="icon-image">
+    <img src="3d-icons/014_Location.png" alt="Location Icon" class="icon-image">
   </div>
   <div class="floating-icon icon-3">
-    <img src="/3d-icons/020_Medical_Tag.png" alt="Medical Tag Icon" class="icon-image">
+    <img src="3d-icons/020_Medical_Tag.png" alt="Medical Tag Icon" class="icon-image">
   </div>
   <div class="floating-icon icon-4">
-    <img src="/3d-icons/029_Stethoscope 1.png" alt="Stethoscope Icon" class="icon-image">
+    <img src="3d-icons/029_Stethoscope 1.png" alt="Stethoscope Icon" class="icon-image">
   </div>
   <div class="floating-icon icon-5">
-    <img src="/3d-icons/059_Surgeon.png" alt="Surgeon Icon" class="icon-image">
+    <img src="3d-icons/059_Surgeon.png" alt="Surgeon Icon" class="icon-image">
   </div>
   <div class="floating-icon icon-6">
-    <img src="/3d-icons/3d_medicine_prescription_and_pills.png" alt="Medicine Pills Icon" class="icon-image">
+    <img src="3d-icons/3d_medicine_prescription_and_pills.png" alt="Medicine Pills Icon" class="icon-image">
   </div>
 
   <div class="floating-icon icon-7">
-    <img src="/3d-icons/008_Guard.png" alt="Guard Icon" class="icon-image">
+    <img src="3d-icons/008_Guard.png" alt="Guard Icon" class="icon-image">
   </div>
   <div class="floating-icon icon-8">
-    <img src="/3d-icons/014_Location.png" alt="Location Icon" class="icon-image">
+    <img src="3d-icons/014_Location.png" alt="Location Icon" class="icon-image">
   </div>
   <div class="floating-icon icon-9">
-    <img src="/3d-icons/020_Medical_Tag.png" alt="Medical Tag Icon" class="icon-image">
+    <img src="3d-icons/020_Medical_Tag.png" alt="Medical Tag Icon" class="icon-image">
   </div>
   <div class="floating-icon icon-10">
-    <img src="/3d-icons/029_Stethoscope 1.png" alt="Stethoscope Icon" class="icon-image">
+    <img src="3d-icons/029_Stethoscope 1.png" alt="Stethoscope Icon" class="icon-image">
   </div>
   <div class="floating-icon icon-11">
-    <img src="/3d-icons/059_Surgeon.png" alt="Surgeon Icon" class="icon-image">
+    <img src="3d-icons/059_Surgeon.png" alt="Surgeon Icon" class="icon-image">
   </div>
   <div class="floating-icon icon-12">
-    <img src="/3d-icons/3d_medicine_prescription_and_pills.png" alt="Medicine Pills Icon" class="icon-image">
+    <img src="3d-icons/3d_medicine_prescription_and_pills.png" alt="Medicine Pills Icon" class="icon-image">
   </div>
 </div>
