--- a/front/src/app/footer/footer.component.html
+++ b/front/src/app/footer/footer.component.html
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="footer-content">
       <div class="logo">
-        <img src="/logo.png" alt="First Signs Logo">
+        <img src="logo.png" alt="First Signs Logo">
       </div>
       <a href="https://github.com/ar1valdi" class="author-name">Jan Kaczerski</a>
       <!--<span class="cookies-text">Cookies</span>-->
