--- a/front/src/app/neural-network/neural-network.component.html
+++ b/front/src/app/neural-network/neural-network.component.html
@@ -4,7 +4,7 @@
     
     <div class="content-wrapper">
       <article class="network-diagram">
-        <img src="/neural-network.png" alt="Neural Network Architecture Diagram" class="diagram-image">
+        <img src="neural-network.png" alt="Neural Network Architecture Diagram" class="diagram-image">
       </article>
       
       <article class="network-description">
