--- a/front/src/app/top-menu/top-menu.component.html
+++ b/front/src/app/top-menu/top-menu.component.html
@@ -3,7 +3,7 @@
   <div class="container">
     <div class="nav-left">
       <a routerLink="/" (click)="scrollToSection('hero')" class="logo">
-        <img src="/logo.png" alt="First Signs Logo">
+        <img src="logo.png" alt="First Signs Logo">
       </a>
       <nav class="navigation">
         <a href="#about" class="nav-link" (click)="scrollToSection('about')">O projekcie</a>
