--- a/front/src/app/about-project/about-project.component.html
+++ b/front/src/app/about-project/about-project.component.html
@@ -5,7 +5,7 @@
     <div class="cards-container">
       <article class="card">
         <div class="card-icon">
-          <img src="/brain-green.png" alt="Brain Icon" class="icon-image">
+          <img src="brain-green.png" alt="Brain Icon" class="icon-image">
         </div>
         <h3 class="card-title">Autorska sieć neuronowa</h3>
         <p class="card-description">
@@ -15,7 +15,7 @@
 
       <article class="card">
         <div class="card-icon">
-          <img src="/medal-green.png" alt="Medal Icon" class="icon-image">
+          <img src="medal-green.png" alt="Medal Icon" class="icon-image">
         </div>
         <h3 class="card-title">85% Dokładność Detekcji</h3>
         <p class="card-description">
@@ -25,7 +25,7 @@
 
       <article class="card">
         <div class="card-icon">
-          <img src="/database-green.png" alt="Database Icon" class="icon-image">
+          <img src="database-green.png" alt="Database Icon" class="icon-image">
         </div>
         <h3 class="card-title">Oczyszanie danych</h3>
         <p class="card-description">
