--- a/front/src/app/hero/hero.component.html
+++ b/front/src/app/hero/hero.component.html
@@ -11,7 +11,7 @@
     </div>
     
     <div class="hero-image">
-      <img src="/hero-doctor.jpg" alt="Doctor" class="doctor-image">
+      <img src="hero-doctor.jpg" alt="Doctor" class="doctor-image">
     </div>
   </div>
 </section>
