--- a/front/src/app/form/form.component.html
+++ b/front/src/app/form/form.component.html
@@ -1,9 +1,11 @@
 <section class="form-section">
   <div class="container">
     <div class="form-header">
-      <h1 class="main-title">Wprowadź dane do analizy</h1>
-      <div class="info-text">
-        Analiza przeprowadzana jest w przeglądarce użytkownika - twoje dane nie są nigdzie wysyłane.
+      <div class="header-content">
+        <h1 class="main-title">Wprowadź dane do analizy</h1>
+        <div class="info-text">
+          Analiza przeprowadzana jest w przeglądarce użytkownika - twoje dane nie są nigdzie wysyłane.
+        </div>
       </div>
     </div>
 
