--- a/front/src/app/form/form.component.scss
+++ b/front/src/app/form/form.component.scss
@@ -111,7 +111,27 @@
   }
 }
 
+// Ensure custom styling applies to selects on iOS Safari (remove native blue style)
+.form-group select {
+  -webkit-appearance: none;
+  appearance: none;
+  background-color: #f8f9fa;
+  background-image: url("data:image/svg+xml;charset=UTF-8,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' viewBox='0 0 20 20' fill='%23289169'%3E%3Cpath d='M5.5 7l4.5 5 4.5-5z'/%3E%3C/svg%3E");
+  background-repeat: no-repeat;
+  background-position: right 1rem center;
+  background-size: 12px 12px;
+  padding-right: 2.5rem;
+  background-clip: padding-box;
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+}
+
+// Hide default arrow in legacy browsers
+.form-group select::-ms-expand {
+  display: none;
+}
+
 .form-group input[type="number"] {
+  appearance: textfield;
   -moz-appearance: textfield;
   
   &::-webkit-outer-spin-button,
@@ -262,6 +282,13 @@
   .shield-icon .icon-image {
     width: 50px;
     height: 50px;
+  }
+
+  .form-header {
+    .header-content {
+      margin-top: 1rem;
+      width: 80%;
+    }
   }
 }
 
