fix forms selects

--- a/front/src/app/components/modal/modal.component.scss
+++ b/front/src/app/components/modal/modal.component.scss
@@ -62,10 +62,10 @@
 
 .modal-success {
   .modal-button {
-    background: linear-gradient(135deg, #4caf50, #388e3c);
+    background: linear-gradient(135deg, #49c193, #289169);
     
     &:hover {
-      background: linear-gradient(135deg, #388e3c, #2e7d32);
+      background: linear-gradient(135deg, #359670, #186346);
     }
   }
 }
