--- a/front/src/app/form/form.component.html
+++ b/front/src/app/form/form.component.html
@@ -20,7 +20,7 @@
         <div class="form-group">
           <label for="gender">Płeć</label>
           <select id="gender" formControlName="Gender">
-            <option value="">Wybierz płeć</option>
+            <option value="" disabled hidden>Wybierz płeć</option>
             <option value="0">Kobieta</option>
             <option value="1">Mężczyzna</option>
           </select>
@@ -29,7 +29,7 @@
         <div class="form-group">
           <label for="ethnicity">Grupa etniczna</label>
           <select id="ethnicity" formControlName="Ethnicity">
-            <option value="">Wybierz grupę etniczną</option>
+            <option value="" disabled hidden>Wybierz grupę etniczną</option>
             <option value="0">Biała</option>
             <option value="1">Azjatycka</option>
             <option value="2">Afroamerykańska</option>
@@ -40,7 +40,7 @@
         <div class="form-group">
           <label for="education">Poziom wykształcenia</label>
           <select id="education" formControlName="EducationLevel">
-            <option value="">Wybierz poziom wykształcenia</option>
+            <option value="" disabled hidden>Wybierz poziom wykształcenia</option>
             <option value="0">Podstawowe</option>
             <option value="1">Średnie</option>
             <option value="2">Wyższe</option>
@@ -57,7 +57,7 @@
         <div class="form-group">
           <label for="smoking">Palenie papierosów</label>
           <select id="smoking" formControlName="Smoking">
-            <option value="">Wybierz opcję</option>
+            <option value="" disabled hidden>Wybierz opcję</option>
             <option value="0">Nie palę</option>
             <option value="1">Palę</option>
           </select>
@@ -87,7 +87,7 @@
         <div class="form-group">
           <label for="familyHistory">Historia rodzinna choroby Parkinsona</label>
           <select id="familyHistory" formControlName="FamilyHistoryParkinsons">
-            <option value="">Wybierz opcję</option>
+            <option value="" disabled hidden>Wybierz opcję</option>
             <option value="0">Brak</option>
             <option value="1">Tak</option>
           </select>
@@ -96,7 +96,7 @@
         <div class="form-group">
           <label for="brainInjury">Uraz głowy</label>
           <select id="brainInjury" formControlName="TraumaticBrainInjury">
-            <option value="">Wybierz opcję</option>
+            <option value="" disabled hidden>Wybierz opcję</option>
             <option value="0">Brak</option>
             <option value="1">Tak</option>
           </select>
@@ -105,7 +105,7 @@
         <div class="form-group">
           <label for="hypertension">Nadciśnienie</label>
           <select id="hypertension" formControlName="Hypertension">
-            <option value="">Wybierz opcję</option>
+            <option value="" disabled hidden>Wybierz opcję</option>
             <option value="0">Brak</option>
             <option value="1">Tak</option>
           </select>
@@ -114,7 +114,7 @@
         <div class="form-group">
           <label for="diabetes">Cukrzyca</label>
           <select id="diabetes" formControlName="Diabetes">
-            <option value="">Wybierz opcję</option>
+            <option value="" disabled hidden>Wybierz opcję</option>
             <option value="0">Brak</option>
             <option value="1">Tak</option>
           </select>
@@ -123,7 +123,7 @@
         <div class="form-group">
           <label for="depression">Depresja</label>
           <select id="depression" formControlName="Depression">
-            <option value="">Wybierz opcję</option>
+            <option value="" disabled hidden>Wybierz opcję</option>
             <option value="0">Brak</option>
             <option value="1">Tak</option>
           </select>
@@ -132,7 +132,7 @@
         <div class="form-group">
           <label for="stroke">Udar mózgu</label>
           <select id="stroke" formControlName="Stroke">
-            <option value="">Wybierz opcję</option>
+            <option value="" disabled hidden>Wybierz opcję</option>
             <option value="0">Brak</option>
             <option value="1">Tak</option>
           </select>
@@ -190,7 +190,7 @@
         <div class="form-group">
           <label for="tremor">Drżenie</label>
           <select id="tremor" formControlName="Tremor">
-            <option value="">Wybierz opcję</option>
+            <option value="" disabled hidden>Wybierz opcję</option>
             <option value="0">Brak</option>
             <option value="1">Tak</option>
           </select>
@@ -199,7 +199,7 @@
         <div class="form-group">
           <label for="rigidity">Sztywność</label>
           <select id="rigidity" formControlName="Rigidity">
-            <option value="">Wybierz opcję</option>
+            <option value="" disabled hidden>Wybierz opcję</option>
             <option value="0">Brak</option>
             <option value="1">Tak</option>
           </select>
@@ -208,7 +208,7 @@
         <div class="form-group">
           <label for="bradykinesia">Bradykinezja (spowolnienie ruchów)</label>
           <select id="bradykinesia" formControlName="Bradykinesia">
-            <option value="">Wybierz opcję</option>
+            <option value="" disabled hidden>Wybierz opcję</option>
             <option value="0">Brak</option>
             <option value="1">Tak</option>
           </select>
@@ -217,7 +217,7 @@
         <div class="form-group">
           <label for="posturalInstability">Niestabilność postawy</label>
           <select id="posturalInstability" formControlName="PosturalInstability">
-            <option value="">Wybierz opcję</option>
+            <option value="" disabled hidden>Wybierz opcję</option>
             <option value="0">Brak</option>
             <option value="1">Tak</option>
           </select>
@@ -226,7 +226,7 @@
         <div class="form-group">
           <label for="speechProblems">Problemy z mową</label>
           <select id="speechProblems" formControlName="SpeechProblems">
-            <option value="">Wybierz opcję</option>
+            <option value="" disabled hidden>Wybierz opcję</option>
             <option value="0">Brak</option>
             <option value="1">Tak</option>
           </select>
@@ -235,7 +235,7 @@
         <div class="form-group">
           <label for="sleepDisorders">Zaburzenia snu</label>
           <select id="sleepDisorders" formControlName="SleepDisorders">
-            <option value="">Wybierz opcję</option>
+            <option value="" disabled hidden>Wybierz opcję</option>
             <option value="0">Brak</option>
             <option value="1">Tak</option>
           </select>
@@ -244,7 +244,7 @@
         <div class="form-group">
           <label for="constipation">Zaparcia</label>
           <select id="constipation" formControlName="Constipation">
-            <option value="">Wybierz opcję</option>
+            <option value="" disabled hidden>Wybierz opcję</option>
             <option value="0">Brak</option>
             <option value="1">Tak</option>
           </select>
